# RobotLearning

./: .buildinfo  .gitignore  .travis.yml  LICENSE  Overview.html  README.md  RunningCode.html  TurtlebotSetup.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.doctrees/: Overview.doctree  RunningCode.doctree  TurtlebotSetup.doctree  environment.pickle  index.doctree
.doctrees/pyrst/: action_manager.doctree  align_ir_example.doctree  auto_docking_policies.doctree  calculate_return_example.doctree  evaluator.doctree  greedy_gq.doctree  gtd.doctree  gvf.doctree  learning_foreground.doctree  modules.doctree  policy.doctree  return_calculator.doctree  state_representation.doctree  to_gtd.doctree  tools.doctree  visualize_pixels.doctree  wall_demo_example.doctree  wis_gtd.doctree  wis_to_gtd.doctree
Documentation/: Example.md  TurtlebotSetup.md
Documentation/reference_learning_code/: CMakeLists.txt  package.xml
Documentation/reference_learning_code/msg/: StateRepresentation.msg
Documentation/reference_learning_code/scripts/: DirectStepsToLeftDemon.py  GVF.py  TileCoder.py  Verifier.py
ROSBase/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
_modules/: action_manager.html  auto_docking_policies.html  calculate_return_example.html  evaluator.html  greedy_gq.html  gtd.html  gvf.html  index.html  learning_foreground.html  policy.html  return_calculator.html  state_representation.html  to_gtd.html  tools.html  visualize_pixels.html  wall_demo_example.html  wis_gtd.html  wis_to_gtd.html
_sources/pyrst/: action_manager.rst.txt  align_ir_example.rst.txt  auto_docking_policies.rst.txt  calculate_return_example.rst.txt  greedy_gq.rst.txt  gtd.rst.txt  learning_foreground.rst.txt  modules.rst.txt  return_calculator.rst.txt  state_representation.rst.txt  to_gtd.rst.txt  visualize_pixels.rst.txt  (+3 more)
docs/: TurtlebotSetup.md
pyrst/: action_manager.html  align_ir_example.html  auto_docking_policies.html  calculate_return_example.html  evaluator.html  greedy_gq.html  gtd.html  gvf.html  learning_foreground.html  modules.html  policy.html  return_calculator.html  state_representation.html  to_gtd.html  tools.html  visualize_pixels.html  wall_demo_example.html  wis_gtd.html  wis_to_gtd.html
source/: sourcefile.py
sphinx/: make.bat
src/: action_manager.py  actual_return_DistanceToBump.npz  auto_docking.py  auto_docking_policies.py  evaluator.py  gentest_state_representation.py  greedy_gq.py  learning_foreground.py  offline_wall_demo.py  return_calculator.py  state_representation.py  tools.py  wall_demo.py  wall_demo_example.py  wis_gtd.py  wis_to_gtd.py
(+94 files in other folders)
